[package]
name = "rig-play"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
colored = "2.2.0"
dotenv = "0.15.0"
serde = "1.0.216"
serde_json = "1.0.133"
thiserror = "2.0.8"
pdf-extract = "0.7.3"
tokio = { version = "1.42.0", features = ["full"] }
rig-core = { version = "0.7.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log = "0.4.22"
env_logger = "0.11.6"

